[package]
name = "algoexpert-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear = { path = "libs/search/linear" }
binary = { path = "libs/search/binary" }
two_num_sum = { path = "libs/arrays/two_num_sum" }

[workspace]
members = [
    "libs/arrays/two_num_sum",
    "libs/search/binary",
    "libs/search/linear",
]
